--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/Jesus24dev/To-Do-Page/issues"
   },
-  "homepage": "https://github.com/Jesus24dev/To-Do-Page#readme"
+  "homepage": "https://github.com/Jesus24dev/To-Do-Page#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "pug": "^3.0.2"
+  }
 }
